--- a/Frame/Layout/6_ReadMore/movieinfowrap.html
+++ b/Frame/Layout/6_ReadMore/movieinfowrap.html
@@ -6,6 +6,7 @@
                 <hgroup>
                     <h2 class="icon9add icon9-info-sign text-primary" style="font-size:40px"></h2>
                     <h4>Inspirations</h4></hgroup>
+
                 <p class="text-muted">For those that like useless reasoning - and a pattern emerges.</p>
 <!--Button -->
                 <section class="panel-body" aria-label="MovieWrap">
@@ -13,48 +14,50 @@
                         <h3 class="panel-title tc">
                         <a style="center" class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#moviezRM"><span>Read - More</span></a></h3></div></section></div>
 <!--Movie ReadMore -->
-                    <div id="moviezRM" class="comment-content panel-collapse collapse">
-                        <div class="content panel-body comment-content">
-                            <p class="lead text-muted">One of the questions I get the most - which is most likely out of mere curiosity I believe:</p> <p class="lead text-muted tc"> What are my favorite movies?</p> 
-                        <section aria-label="animatedtitle" class="bible-content">
-                            <h5 class="tc">Animated</h5>
-                        </section>
-                        <section aria-label="Animated" class="comment-content">
-                            <p>I kept the animated short and to the point to avoid listing endless top contenders such as RobinHood and The Great Mouse Detective which would just end up listing my favorite Disneys in order. Or wander down the other road from RockaDoodle and Fievel Goes West. So to prevent this I just settled on the All Else 5 Favorites that not only I would sit down and watch - but would recommend to parents.</p>
-                        </section>
-                        <section aria-label="movietitle" class="bible-content">
-                            <h5>Movie</h5>
-                        </section>
-                        <section aria-label="movied" class="comment-content">
-                            <p>This is simpler to round up to 10. There is a particular theme that will always win out above the others. This theme naturally and easily carved out my top with the question if I could only keep 10 movies. These are those movies.</p>
-                        </section>
-                        <section aria-label="showtitle" class="bible-content">
-                            <h5>Show Series</h5>
-                        </section>
-                        <section aria-label="showed" class="comment-content">
-                            <p>This only expands into series - where things change a little or shifts in opposition to movies - or at least many tend to think so at first glance. A series is more than a message, more than the general idea as a movie is, it is an explanation - a deep dive into those concepts - a demonstration per say : played out in real time(series). It is rare to find a great series.
-                            <br><br> 
-                            However, there are 8 that are actully good.</p>
-                        </section>
-                        <section aria-label="popculturetitle" class="bible-content">
-                            <h5>Pop Culture</h5>
-                        </section>
-                        <section aria-label="PopCultured" class="comment-content">
-                            <p>
-                            This pop-culture question is normal curiosity and how many attempt to rationalize things ; as strange as that may sound to many...
-                            although this is not as strange as it may sound. In fact this is extremely normal. Especially when considering my ideology and beliefs in which pop-culture serves as a reference to help categorize the unknown into familiar concepts for them.
-                            <br><br>
-                            Such as the assumption: albeit also topping contenders for this question would be <span class="text-muted">Passion of Christ, Gladiator, Boondock Saints, GreenStreet Hooligans, The Patriot, 300, Law Abiding Citizen, Gangs of New York, or even How to Rob a Bank</span>...
-                            <br><br> 
-                            Many others with a more conspirator mindset would go a slightly different route by assuming the <span class="text-muted">Matrix, Equilibrium, Lord of War, V for Vendetta,</span> and others have gone straight to something like <span class="text-muted">Exam, The Interview(Hugo Weaving one), Faceoff, American Psycho, Cube, or Saw.</span>
-                            <br><br> 
-                            All of which are in my collection -- all in which I absolutely do in fact admire -- and all for the reasons many would probably never think they would be. However, out of all the hollywood movies/entertainment - my list(s) always seems to catch everyone off guard.
-                            <br><br> 
-                            So with that said this is why I share them here - they are a big influence, massive personal inspirations, some of the greatest works in my eyes, and because I am surprisingly asked ALOT.
-                            <br><br> 
-                            Maybe you haven't seen them and this list presents a chance to watch them, maybe you have seen them and hopefully will have some nostalgic effect. Either way I hope you get something out of them as I decided instead of a top 10 which is nearly impossible due to category - I would create 3 types with top (animated-5, movie-10, and show-8).
-                        </p></section></div></div>
-                </section>
+                <div id="moviezRM" class="comment-content panel-collapse collapse">
+                    <div class="content panel-body comment-content">
+                        <p class="lead text-muted">One of the questions I get the most - which is most likely out of mere curiosity I believe:</p> <p class="lead text-muted tc"> What are my favorite movies?</p> 
+
+                    <section aria-label="animatedtitle" class="bible-content">
+                        <h5 class="tc">Animated</h5></section>
+
+                    <section aria-label="Animated" class="comment-content">
+                        <p>I kept the animated list short and to the point to avoid listing endless top contenders such as RobinHood and many other Great Animations which would just end up listing my favorite Disneys in order - Classical Disneys are all great. Or wander down the other road from other Production companies. So to prevent this I just settled on the All Else top 9 Favorites from amoungst all of them which themes build upon one another that not only I would sit down and watch at anytime - but would recommend to parents.</p></section>
+
+                    <section aria-label="movietitle" class="bible-content">
+                        <h5>Movie</h5></section>
+
+                    <section aria-label="movied" class="comment-content">
+                        <p>This is simpler to round up to 10. There is a particular theme that will always win out above the others that plays off across animations and the shows. This theme naturally and easily carved out my top with the question if I could only keep 10 movies (in general) which would they be. These are those movies.</p></section>
+
+                    <section aria-label="showtitle" class="bible-content">
+                        <h5>Show Series</h5></section>
+
+                    <section aria-label="showed" class="comment-content">
+                        <p>This only expands into series - where things change a little or shifts in opposition to movies - or at least many tend to think so at first glance. A series is more than a message, more than the general idea as a movie is, it is an explanation - a deep dive into those concepts - a demonstration per say - a simulation if you will : played out in real time(series). It is rare to find a great series.
+                        <br><br> 
+                        However, there are 8 that are extremley good. That really sum up the major aspects.</p></section>
+                    
+                    <section aria-label="popculturetitle" class="bible-content">
+                        <h5>Pop Culture</h5></section>
+
+                    <section aria-label="PopCultured" class="comment-content">
+                        <p>
+                        This pop-culture question is normal curiosity and how many attempt to rationalize things ; as strange as that may sound to many...
+                        although this is not as strange as it may sound. In fact this is extremely normal. Especially when considering my ideology and beliefs in which pop-culture serves as a reference to help categorize the unknown into familiar concepts for them.
+                        <br><br>
+                        Such as the assumption: albeit also topping contenders for this question would be <span class="po">Passion of Christ, Gladiator, Boondock Saints, GreenStreet Hooligans, The Patriot, 300, Law Abiding Citizen, Gangs of New York, or even How to Rob a Bank</span>...
+                        <br><br> 
+                        Many others with a more conspirator mindset would go a slightly different route by assuming the <span class="pb">Matrix, Equilibrium, Lord of War, Minority Report, V for Vendetta,</span> and others have gone straight to something like <span class="pr">Exam, The Interview(Hugo Weaving one), Faceoff, American Psycho, Cube-Trilogy, or the Saw franchise.</span>
+                        <br><br>
+                        Others would say but why are Nazi themes aka National Socialist - films not starred such as <span class="pg">Felon, Shot Caller, American HistoryX, Brawl in Cellblock 99</span> etc not featured being the true "worldview", "theme", or "central topic". Although all these are rather Great and in collection, this is not the "worldview" I promote, although they may be more realistic in many cases, however they glorify aspects which should not be glorified. Hence the reason I decided to add top 10 instead of 9 for "Fight Club" which better summarizes the militant side.
+                        <br><br> 
+                        As stated all of which are in my collection -- all in which I absolutely do in fact admire -- and all for the reasons many would probably never think they would be. However, out of all the hollywood movies/entertainment - my list(s) always seems to catch everyone off guard of what and how I promote.
+                        <br><br> 
+                        So with that said this is why I share them here - they are all a big influence, massive personal inspirations, some of the greatest works in my eyes, and because I am surprisingly asked ALOT. I have no intentions of just posting a massive library or come off as a pirate site. Hence another 24 mentioned here.
+                        <br><br> 
+                        Maybe you haven't seen them and this list presents a chance to watch them, maybe you have seen them and hopefully will have some nostalgic effect. Either way I hope you get something out of them as I decided instead of a top 10 which is nearly impossible due to category - I would create 3 types with top (animated-9, movie-10, and show-8).</p></section>
+                </div></div></section>
 <!--Quote -->
                 <div class="panel_row">
                     <div class="blog-content col-MainX col-lg-MainL col-MainM col-sm-MainS">
